[ANY] Update dependencies